# Lox

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  lox  main.cpp  token.cpp  token.h
src/: CMakeLists.txt  lox.cpp  lox.h  main.cpp  scanner.cpp  scanner.h  token.cpp  token.h
